--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="container heading-intro">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <div class="profile-intro-img-wrapper">
+                        <div class="profile-intro-img-wrapper mr-auto ml-auto">
                             <img class="profile-img-lg img-fluid" src="img/profile2.png">
                         </div>
                     </div>
@@ -670,7 +670,7 @@
         </div>
 
         <!-- Google Map STARTS HERE -->
-        <div class="container-fluid map-area">
+        <div class="container-fluid map-area d-none d-sm-block d-md-none">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d196147.1141131287!2d-84.34224170116731!3d39.81150791774338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884080d5aedd1403%3A0xa640e392f20e4ce4!2sDayton%2C%20OH!5e0!3m2!1sen!2sus!4v1600530522705!5m2!1sen!2sus" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="container contact-info-area">
                 <div class="row">
@@ -706,15 +706,15 @@
         </div>
 
         <!-- Footer Area STARTS HERE -->
-        <div class="container-fluid footer-area">
+        <div class="container-fluid footer-area three-col">
             <footer class="container">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-md-3">
                         <h5>John Doe Smith</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta rerum quas eligendi aperiam ea, minus aliquid nobis facere perferendis officia doloremque in. Corporis ut adipisci repellendus omnis, minus nostrum. Beatae.</p>
                         <a href="#"><i class="fab fa-facebook-square"></i></a> <a href="#"><i class="fab fa-twitter-square"></i></a> <a href="#"><i class="fab fa-youtube-square"></i></a> <a href="#"><i class="fab fa-instagram-square"></i></a>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-3">
                         <h5>Contact</h5>
                         <ul>
                             <li>
@@ -731,7 +731,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-3">
                         <h5>Featured Listing</h5>
                         <div class="card mb-3">
                             <div class="row no-gutters">
@@ -766,7 +766,7 @@
                             </div> 
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-3">
                         <h5>Search</h5>
                         <form>
                             <div class="form-group">
@@ -779,14 +779,55 @@
                 </div>
             </footer>
         </div>
+
+        <!-- Footer Area 4-Column STARTS HERE -->
+        <div class="container-fluid footer-area four-col">
+            <footer class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h5>John Doe Smith</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta rerum quas eligendi aperiam ea, minus aliquid nobis facere perferendis officia doloremque in. Corporis ut adipisci repellendus omnis, minus nostrum. Beatae.</p>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a> <a href="#"><i class="fab fa-twitter-square"></i></a> <a href="#"><i class="fab fa-youtube-square"></i></a> <a href="#"><i class="fab fa-instagram-square"></i></a>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Contact</h5>
+                        <ul>
+                            <li>
+                                <i class="far fa-building"></i> 101 W Third St, Dayton, OH 45402
+                            </li>
+                            <li>
+                                <i class="fas fa-phone"></i> 1 (800) 555-5555
+                            </li>
+                            <li>
+                                <i class="fas fa-print"></i> 1 (800) 555-5555
+                            </li>
+                            <li>
+                                <i class="far fa-envelope"></i> jsmith@domainemail.com
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Search</h5>
+                        <form>
+                            <div class="form-group">
+                                <input class="form-control" type="text" placeholder="Type Keyword">
+                            </div>
+                            
+                            <button class="btn btn-info btn-block">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </footer>
+        </div>
+
         <!-- Copyright Area STARTS HERE -->
         <div class="container-fluid copyright-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-6">
                         Designed by Rafael Cortes <i class="far fa-copyright"></i> 2020
                     </div>
-                    <div class="col-md-6 text-right">
+                    <div class="col-6 text-right">
                            <a href="#">Term of Use</a> <a href="#">Privacy Policy</a>
                     </div>
                 </div>
