--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
         </div>
 
         <!-- Google Map STARTS HERE -->
-        <div class="container-fluid map-area d-none d-sm-block d-md-none">
+        <div class="container-fluid map-area">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d196147.1141131287!2d-84.34224170116731!3d39.81150791774338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884080d5aedd1403%3A0xa640e392f20e4ce4!2sDayton%2C%20OH!5e0!3m2!1sen!2sus!4v1600530522705!5m2!1sen!2sus" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="container contact-info-area">
                 <div class="row">
